releng - fix docker build action

--- a/.github/composites/docker-build-push/action.yaml
+++ b/.github/composites/docker-build-push/action.yaml
@@ -42,19 +42,19 @@ runs:
       id: get_tag
       shell: python
       run: |
-        if '${{ github.ref }}'.startswith('refs/tags'):
-          print('::set-output name=tag::latest')
-        elif '${{ github.ref }}' == 'refs/heads/master':
-          print('::set-output name=tag::dev')
+        if "${{ github.ref }}".startswith("refs/tags"):
+          print("::set-output name=tag::latest")
+        elif "${{ github.ref }}" == "refs/heads/master":
+          print("::set-output name=tag::dev")
         # Pull requests dont get pushed so this should be fine
-        elif '${{ github.ref }}'.startswith('refs/pull'):
+        elif "${{ github.ref }}".startswith("refs/pull"):
           # ref looks like: refs/pull/$pr_number/merge
-          id = '${{ github.ref }}'.split('/')[-2]
-          print(f'::set-output name=tag::pr-{id}')
+          id = "${{ github.ref }}".split("/")[-2]
+          print(f"::set-output name=tag::pr-{id}")
         else:
           # this should just be the branch
-          id = '${{ github.ref }}'.split('/')[-1]
-          print(f'::set-output name=tag::{id}')
+          id = "${{ github.ref }}".split("/")[-1]
+          print(f"::set-output name=tag::{id}")
 
     - name: Docker meta
       id: meta
