--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - main
     tags:
       # todo: update for 1.0
       - 0.*
@@ -15,17 +16,15 @@ jobs:
           - c7n-org
           - mailer
           - policystream
-
-    use_cache:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: ${{ matrix.image }} build and push
-          uses: ./.github/composites/docker-build-push
-          env:
-            HUB_USER: c7nbuild
-            HUB_TOKEN: ${{ secrets.DOCKER_CI_HUB_TOKEN }}
-          with:
-            name: ${{ matrix.image }}
-            push: true
-            platforms: linux/arm64,linux/amd64
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: ${{ matrix.image }} build and push
+        uses: ./.github/composites/docker-build-push
+        env:
+          HUB_USER: c7nbuild
+          HUB_TOKEN: ${{ secrets.DOCKER_CI_HUB_TOKEN }}
+        with:
+          name: ${{ matrix.image }}
+          push: true
+          platforms: linux/arm64,linux/amd64
