--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -14,10 +14,10 @@ jobs:
   Lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.10
       - name: Install Linter
         run: |
           python -m pip install --upgrade pip
@@ -30,10 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: Lint
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.10
       - name: Run Bandit
         run: |
           python -m pip install bandit
@@ -48,24 +48,15 @@ jobs:
     needs: Lint
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Install poetry
+        run: pipx install poetry==1.1.15
+      - uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Bootstrap poetry
-        shell: bash
-        run: |
-          curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
-            | python - -y --version 1.1.9
-
-      - name: Set up cache
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: .venv
-          key: venv-docs-${{ runner.os }}-3.9-v2-${{ hashFiles('**/poetry.lock') }}
+          cache: "poetry"
 
       - name: Set up doc cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: sphinx
         with:
           path: |
@@ -76,32 +67,9 @@ jobs:
             docs/source/awscc/resources
           key: sphinx-docs-${{ runner.os }}-3.9-v2-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Update PATH
-        shell: bash
-        run: |
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
-          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-
-      - name: Ensure cache is healthy
-        if: steps.cache.outputs.cache-hit == 'true'
-        id: cache_check
-        shell: bash
-        run: |
-          (poetry run custodian version && echo "::set-output name=venv::success") || (rm -rf .venv && echo "::set-output name=venv::recreate")
-
-      - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
-        shell: bash
-        run: |
-          python -m venv .venv
-
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
         run: |
-          python -m pip install --upgrade pip
-          pip install -U wheel
           make install-poetry
 
       - name: Build Docs
@@ -132,70 +100,26 @@ jobs:
           - os: ubuntu-latest
             python-version: 3.7
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Install poetry
+        run: pipx install poetry==1.1.15
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
+          cache: "poetry"
           python-version: ${{ matrix.python-version }}
-
-      - name: Bootstrap poetry
-        shell: bash
-        run: |
-          curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
-            | python - -y --version 1.1.13
-
-      - name: Set up cache
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Update PATH
-        shell: bash
-        run: |
-          if [[ "$OSTYPE" == "msys" ]]
-          then
-            echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
-            echo "$PWD\.venv\Scripts" >> $GITHUB_PATH
-            echo "VIRTUAL_ENV=$PWD\.venv" >> $GITHUB_ENV
-          else
-            echo "$HOME/.local/bin" >> $GITHUB_PATH
-            echo "$PWD/.venv/bin" >> $GITHUB_PATH
-            echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          fi
-
-      - name: Ensure cache is healthy
-        if: steps.cache.outputs.cache-hit == 'true'
-        id: cache_check
-        shell: bash
-        run: |
-          (poetry run custodian version && echo "::set-output name=venv::success") || (rm -rf .venv && echo "::set-output name=venv::recreate")
-
-      - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
-        shell: bash
-        env:
-          CHECK_VENV: ${{ steps.cache_check.outputs.venv }}
-          CACHE_HIT: ${{ steps.cache.outputs.cache-hit }}
-        run: |
-          echo "check venv $CHECK_VENV"
-          echo "cache hit $CACHE_HIT"
-          python -m venv .venv
+          cache-dependency-path: |
+            **/poetry.lock
 
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install -U wheel
-          make install-poetry
+        run: make install-poetry
 
       - name: Test
         shell: bash
@@ -215,7 +139,7 @@ jobs:
           fi
 
       - name: Upload Code Coverage
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         if: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
         with:
           files: ./coverage.xml
