poetry run make sphinx

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Build Docs
         shell: bash
         run: |
-          make sphinx
+          poetry run make sphinx
 
       - name: Deploy Docs
         if: ${{ github.event_name == 'push' }}
