c7n_tencentcloud - tests - support vcr for flight recording (#7735)

--- a/tools/c7n_tencentcloud/pyproject.toml
+++ b/tools/c7n_tencentcloud/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^7.1.2"
 c7n = {path = "../..", develop = true}
 freezegun = "^1.2.2"
 pytest-cov = "^3.0.0"
+pytest-recording = "^0.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
