--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ twine = "^3.1.1"
 pytest-sugar = "^0.9.2"
 click = "^8.0"
 freezegun = "^1.2.2"
+pytest-recording = "^0.12.1"
 
 [tool.black]
 skip-string-normalization = true
