--- a/test.env
+++ b/test.env
@@ -10,3 +10,5 @@ export AZURE_TENANT_ID=ea42f556-5106-4743-99b0-000000000000
 export GOOGLE_CLOUD_PROJECT=custodian-1291
 export GOOGLE_APPLICATION_CREDENTIALS=tools/c7n_gcp/tests/data/credentials.json
 export C7N_VALIDATE=true
+export TENCENTCLOUD_SECRET_ID=AiIDOaWCckbC000000000000000000000000
+export TENCENTCLOUD_SECRET_KEY=qQxmZ5JG000000000000000000000000
