parent 78a51ba68a284d278ad7569f80206c82fe048fa1 author Farzan Vahdat <farzanvahdat@gmail.com> 1663084949 -0700 committer farzanv <Farzanvahdat@gmail.com> 1663554873 -0700
Added aws.ec2 Instance Meta Data Tags to set-metadata-access action

--- a/tools/c7n_awscc/c7n_awscc/data/aws_imagebuilder_infrastructureconfiguration.json
+++ b/tools/c7n_awscc/c7n_awscc/data/aws_imagebuilder_infrastructureconfiguration.json
@@ -124,6 +124,14 @@
             "required",
             "optional"
           ]
+        },
+        "InstanceMetadataTags": {
+          "description": "Enables access to Instance metadata tags ",
+          "type": "string",
+          "enum": [
+            "enabled",
+            "disabled"
+          ]
         }
       }
     },
