--- a/requirements.txt
+++ b/requirements.txt
@@ -3,31 +3,33 @@ atomicwrites==1.4.1; python_version >= "3.6" and python_full_version < "3.0.0" a
 attrs==22.1.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.7" and python_version < "4.0"
 aws-xray-sdk==2.10.0
 bleach==5.0.1; python_version >= "3.7"
-boto3==1.24.44; python_version >= "3.7"
-botocore==1.27.44; python_version >= "3.7"
-certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
+boto3==1.24.76; python_version >= "3.7"
+botocore==1.27.76; python_version >= "3.7"
+certifi==2022.9.14; python_version >= "3.7" and python_version < "4"
 cffi==1.15.1; sys_platform == "linux" and python_version >= "3.7"
-charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
+charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 click==8.1.3; python_version >= "3.7"
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0" and platform_system == "Windows" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_version < "4.0"
 coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
-cryptography==37.0.4; sys_platform == "linux" and python_version >= "3.7"
+cryptography==38.0.1; sys_platform == "linux" and python_version >= "3.7"
 docutils==0.17.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 execnet==1.9.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
 flake8==3.9.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 freezegun==1.2.2; python_version >= "3.6"
-idna==3.3; python_version >= "3.7" and python_version < "4"
+idna==3.4; python_version >= "3.7" and python_version < "4"
 importlib-metadata==4.12.0; python_version >= "3.7"
 importlib-resources==5.9.0; python_version < "3.9" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
+jaraco.classes==3.2.2; python_version >= "3.7"
 jeepney==0.8.0; sys_platform == "linux" and python_version >= "3.7"
 jmespath==1.0.1; python_version >= "3.7" and python_version < "4.0"
 jsonpatch==1.32; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 jsonpointer==2.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-jsonschema==4.9.0; python_version >= "3.7"
-keyring==23.7.0; python_version >= "3.7"
+jsonschema==4.16.0; python_version >= "3.7"
+keyring==23.9.3; python_version >= "3.7"
 mccabe==0.6.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 mock==4.0.3; python_version >= "3.6"
+more-itertools==8.14.0; python_version >= "3.7"
 multidict==6.0.2; python_version >= "3.7"
 packaging==21.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
 pkginfo==1.8.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
@@ -35,39 +37,40 @@ pkgutil-resolve-name==1.3.10; python_version < "3.9" and python_version >= "3.7"
 placebo==0.9.0
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
 portalocker==2.5.1; python_version >= "3.6" and python_version < "4.0"
-psutil==5.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+psutil==5.9.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
 pycodestyle==2.7.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "linux" or sys_platform == "linux" and python_version >= "3.7" and python_full_version >= "3.4.0"
 pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pygments==2.12.0; python_version >= "3.7"
+pygments==2.13.0; python_version >= "3.7"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 pyrsistent==0.18.1; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-forked==1.4.0; python_version >= "3.6" and python_version < "4.0"
+pytest-recording==0.12.1; python_version >= "3.5"
 pytest-sugar==0.9.5
-pytest-terraform==0.6.1; python_version >= "3.6" and python_version < "4.0"
+pytest-terraform==0.6.4; python_version >= "3.6" and python_version < "4.0"
 pytest-xdist==2.5.0; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pywin32-ctypes==0.2.0; sys_platform == "win32" and python_version >= "3.7"
 pywin32==304; python_version >= "3.6" and python_version < "4.0" and platform_system == "Windows"
 pyyaml==6.0; python_version >= "3.6"
-readme-renderer==35.0; python_version >= "3.7"
+readme-renderer==37.1; python_version >= "3.7"
 requests-toolbelt==0.9.1; python_version >= "3.6"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 rfc3986==2.0.0; python_version >= "3.7"
 s3transfer==0.6.0; python_version >= "3.7"
-secretstorage==3.3.2; sys_platform == "linux" and python_version >= "3.7"
+secretstorage==3.3.3; sys_platform == "linux" and python_version >= "3.7"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 tabulate==0.8.10; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-termcolor==1.1.0
+termcolor==2.0.1; python_version >= "3.7"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
-tqdm==4.64.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+tqdm==4.64.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 twine==3.8.0; python_version >= "3.6"
 typing-extensions==4.3.0; python_version == "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.7")
-urllib3==1.26.11; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
-vcrpy==4.2.0; python_version >= "3.7"
+urllib3==1.26.12; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+vcrpy==4.2.1; python_version >= "3.7"
 webencodings==0.5.1; python_version >= "3.7"
 wrapt==1.14.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 yarl==1.8.1; python_version >= "3.7"
