--- a/tools/c7n_azure/requirements.txt
+++ b/tools/c7n_azure/requirements.txt
@@ -2,16 +2,16 @@ adal==1.2.7
 applicationinsights==0.11.10
 apscheduler==3.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
 azure-common==1.1.28; python_version >= "3.6"
-azure-core==1.24.2; python_version >= "3.6"
+azure-core==1.25.1; python_version >= "3.7"
 azure-cosmos==3.2.0
 azure-cosmosdb-nspkg==2.0.2
 azure-cosmosdb-table==1.0.6
-azure-functions==1.11.2; python_version >= "3" and python_version < "4"
+azure-functions==1.11.3; python_version >= "3" and python_version < "4"
 azure-graphrbac==0.61.1
 azure-identity==1.10.0; python_version >= "3.6"
-azure-keyvault-certificates==4.4.0; python_version >= "3.6"
-azure-keyvault-keys==4.5.1; python_version >= "3.6"
-azure-keyvault-secrets==4.4.0; python_version >= "3.6"
+azure-keyvault-certificates==4.5.1; python_version >= "3.6"
+azure-keyvault-keys==4.6.1; python_version >= "3.6"
+azure-keyvault-secrets==4.5.1; python_version >= "3.6"
 azure-keyvault==4.2.0
 azure-mgmt-advisor==9.0.0
 azure-mgmt-apimanagement==1.0.0
@@ -24,7 +24,7 @@ azure-mgmt-compute==19.0.0
 azure-mgmt-containerinstance==7.0.0
 azure-mgmt-containerregistry==8.0.0b1
 azure-mgmt-containerservice==15.1.0
-azure-mgmt-core==1.3.1; python_version >= "3.6"
+azure-mgmt-core==1.3.2; python_version >= "3.6"
 azure-mgmt-cosmosdb==6.4.0
 azure-mgmt-costmanagement==1.0.0
 azure-mgmt-databricks==1.0.0b1
@@ -56,20 +56,20 @@ azure-mgmt-subscription==1.0.0
 azure-mgmt-trafficmanager==0.51.0
 azure-mgmt-web==2.0.0
 azure-nspkg==3.0.2
-azure-storage-blob==12.13.0; python_version >= "3.6"
+azure-storage-blob==12.13.1; python_version >= "3.6"
 azure-storage-common==2.1.0
 azure-storage-file-share==12.9.0; python_version >= "3.6"
 azure-storage-file==2.1.0
 azure-storage-queue==12.4.0; python_version >= "3.6"
 backports.zoneinfo==0.2.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6") or python_full_version >= "3.5.0" and python_version < "3.9" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6")
-certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
-cffi==1.15.1; python_version >= "3.6"
-charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
+certifi==2022.9.14; python_version >= "3.7" and python_version < "4"
+cffi==1.15.1; python_version >= "3.7"
+charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 click==8.1.3; python_version >= "3.7"
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
-cryptography==37.0.4; python_version >= "3.6"
-distlib==0.3.5
-idna==3.3; python_version >= "3.7" and python_version < "4"
+cryptography==38.0.1; python_version >= "3.6"
+distlib==0.3.6
+idna==3.4; python_version >= "3.7" and python_version < "4"
 importlib-metadata==4.12.0; python_version < "3.8" and python_version >= "3.7"
 isodate==0.6.1; python_version >= "3.6"
 jmespath==1.0.1; python_version >= "3.7"
@@ -78,19 +78,20 @@ msal==1.18.0; python_version >= "3.6"
 msrest==0.7.1; python_version >= "3.6"
 msrestazure==0.6.4
 netaddr==0.7.20
-oauthlib==3.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+oauthlib==3.2.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 portalocker==2.5.1
-pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
-pyjwt==2.4.0; python_version >= "3.6"
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.4.0"
+pyjwt==2.5.0; python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 pytz-deprecation-shim==0.1.0.post0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-pytz==2022.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
+pytz==2022.2.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 pywin32==304; python_version >= "3.6" and platform_system == "Windows"
 requests-oauthlib==1.3.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.6"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+types-cryptography==3.3.23; python_version >= "3.7"
 typing-extensions==4.3.0; python_version < "3.8" and python_version >= "3.7"
-tzdata==2022.1; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6" and platform_system == "Windows"
+tzdata==2022.2; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6" and platform_system == "Windows"
 tzlocal==4.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.6"
-urllib3==1.26.11; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+urllib3==1.26.12; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 zipp==3.8.1; python_version < "3.8" and python_version >= "3.7"
