--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,10 @@ commands =
 commands = make lint
 
 [testenv:docs]
+# https://github.com/grpc/grpc/issues/25082
+setenv =
+    GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1
+    GRPC_PYTHON_BUILD_SYSTEM_ZLIB=1
 whitelist_externals = make
 commands = make sphinx
 deps =
