--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -22,10 +22,13 @@ jobs:
       - name: Install Linter
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8 black
       - name: Lint Check
         run: |
           make lint
+      - name: Format Check
+        run: |
+          black --check tools/c7n_left
 
   Analyzer:
     runs-on: ubuntu-latest
