--- a/.codecov.yml
+++ b/.codecov.yml
@@ -29,6 +29,9 @@ coverage:
       tf:
         paths: "tools/c7n_terraform"
         threshold: "1%"
+      shiftleft:
+        paths: "tools/c7n_left"
+        threshold: "3%"
       # aws is weaved throughout core atm can't easily call it out separately
       custodian:
       # one of the tests is slightly variable coverage due to concurrency (0.01)
