--- a/tools/c7n_left/pyproject.toml
+++ b/tools/c7n_left/pyproject.toml
@@ -18,9 +18,9 @@ c7n-left = 'c7n_left.cli:cli'
 
 [tool.poetry.dependencies]
 python = "^3.7"
-click = "^8.1.3"
-rich = "^12.5.1"
-tfparse = "^0.1.3"
+click = ">=8.0"
+rich = "^12.5"
+tfparse = "^0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
