--- a/tox.ini
+++ b/tox.ini
@@ -24,8 +24,8 @@ deps =
 
 setenv =
     AWS_DEFAULT_REGION=us-east-1
-    AWS_ACCESS_KEY_ID=AKIAS7BU6FVPBABCQOYD
-    AWS_SECRET_ACCESS_KEY=MKf8jzMbcoewSFJuc+OVJWltefyUGG6SGCMf6pgR
+    AWS_ACCESS_KEY_ID=bar
+    AWS_SECRET_ACCESS_KEY=fake
     C7N_TEST_RUN=true
 
 [testenv:py39]
