--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -22,10 +22,13 @@ jobs:
       - name: Install Linter
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8 black
       - name: Lint Check
         run: |
           make lint
+      - name: Format Check
+        run: |
+          black --check tools/c7n_left
 
   Analyzer:
     runs-on: ubuntu-latest
@@ -62,7 +65,7 @@ jobs:
         id: cache
         with:
           path: .venv
-          key: venv-docs-${{ runner.os }}-3.9-v2-${{ hashFiles('**/poetry.lock') }}
+          key: venv-docs-${{ runner.os }}-3.9-v3-${{ hashFiles('**/poetry.lock') }}
 
       - name: Set up doc cache
         uses: actions/cache@v2
@@ -74,7 +77,7 @@ jobs:
             docs/source/gcp/resources
             docs/source/azure/resources
             docs/source/awscc/resources
-          key: sphinx-docs-${{ runner.os }}-3.9-v2-${{ hashFiles('**/poetry.lock') }}
+          key: sphinx-docs-${{ runner.os }}-3.9-v3-${{ hashFiles('**/poetry.lock') }}
 
       - name: Update PATH
         shell: bash
@@ -123,10 +126,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.9]
+        python-version: ["3.10"]
         include:
           - os: ubuntu-latest
-            python-version: "3.10"
+            python-version: 3.9
           - os: ubuntu-latest
             python-version: 3.8
           - os: ubuntu-latest
@@ -199,7 +202,7 @@ jobs:
       - name: Test
         shell: bash
         env:
-          COV_RUN: ${{ contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu') }}
+          COV_RUN: ${{ contains(matrix.python-version, '3.10') && contains(matrix.os, 'ubuntu') }}
         run: |
           if [[ "$COV_RUN" == "true" ]]
           then
@@ -207,7 +210,9 @@ jobs:
             . test.env && poetry run pytest -n auto tests tools \
               --cov c7n --cov tools/c7n_azure/c7n_azure \
               --cov tools/c7n_gcp/c7n_gcp --cov tools/c7n_kube/c7n_kube \
-              --cov tools/c7n_mailer/c7n_mailer --cov tools/c7n_tencentcloud/c7n_tencentcloud
+              --cov tools/c7n_tencentcloud/c7n_tencentcloud \
+              --cov tools/c7n_left/c7n_left \
+              --cov tools/c7n_mailer/c7n_mailer
             poetry run coverage xml
           else
             . test.env && poetry run pytest -n auto tests tools
@@ -215,7 +220,7 @@ jobs:
 
       - name: Upload Code Coverage
         uses: codecov/codecov-action@v2
-        if: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
+        if: contains(matrix.python-version, '3.10') && contains(matrix.os, 'ubuntu')
         with:
           files: ./coverage.xml
           name: codecov
