--- a/tools/c7n_left/pyproject.toml
+++ b/tools/c7n_left/pyproject.toml
@@ -1,30 +1,32 @@
 [tool.poetry]
-name = "c7n_org"
-version = "0.6.18"
-description = "Cloud Custodian - Parallel Execution"
-readme = "README.md"
-homepage = "https://cloudcustodian.io"
-documentation = "https://cloudcustodian.io/docs/tools/c7n-org.html"
-repository = "https://github.com/cloud-custodian/cloud-custodian"
+name = "c7n_left"
+version = "0.1.0"
+description = "Custodian policies for IAAC definitions"
 authors = ["Cloud Custodian Project"]
-license = "Apache-2.0"
-classifiers=[
+license = "Apache-2"
+homepage = "https://cloudcustodian.io"
+repository = "https://github.com/cloud-custodian/cloud-custodian"
+documentation = "https://cloudcustodian.io/docs/"
+classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing"
 ]
 
 [tool.poetry.scripts]
-c7n-org = 'c7n_org.cli:cli'
+c7n-left = 'c7n_left.cli:cli'
 
 [tool.poetry.dependencies]
 python = "^3.7"
 click = ">=8.0"
+rich = "^12.5"
+tfparse = "^0.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.3"
+pytest-terraform = "^0.6.4"
 c7n = {path = "../..", develop = true}
-pytest = "^7.1.2"
 
 [build-system]
-requires = ["poetry>=0.12", "setuptools"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
