--- a/.codecov.yml
+++ b/.codecov.yml
@@ -15,22 +15,22 @@ coverage:
         only_pulls: true
     project:
       azure:
-        paths: "tools/c7n_azure"
+        paths: ["tools/c7n_azure"]
         threshold: "1%"
       gcp:
-        paths: "tools/c7n_gcp"
+        paths: ["tools/c7n_gcp"]
         threshold: "1%"
       mailer:
-        paths: "tools/c7n_mailer"
+        paths: ["tools/c7n_mailer"]
         threshold: "3%"
       k8s:
-        paths: "tools/c7n_kube"
+        paths: ["tools/c7n_kube"]
         threshold: "1%"
       tf:
-        paths: "tools/c7n_terraform"
+        paths: ["tools/c7n_terraform"]
         threshold: "1%"
       shiftleft:
-        paths: "tools/c7n_left"
+        paths: ["tools/c7n_left"]
         threshold: "3%"
       # aws is weaved throughout core atm can't easily call it out separately
       custodian:
