--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,19 @@ envlist = py36,py37,py38,py39,lint
 [testenv]
 usedevelop = true
 deps =
-   -r requirements-dev.txt
+   -rrequirements-dev.txt
 
 setenv =
-    AWS_DEFAULT_REGION=us-west-1
-    AWS_ACCESS_KEY_ID="bar"
-    AWS_SECRET_ACCESS_KEY="fake"
+    AWS_DEFAULT_REGION=us-east-1
+    AWS_ACCESS_KEY_ID=foo
+    AWS_SECRET_ACCESS_KEY=bar
+    AWS_SESSION_TOKEN=fake
     C7N_TEST_RUN=true
+    AZURE_ACCESS_TOKEN=fake_token
+    AZURE_SUBSCRIPTION_ID=ea42f556-5106-4743-99b0-c129bfa71a47
+    AZURE_TENANT_ID=ea42f556-5106-4743-99b0-000000000000
+    GOOGLE_CLOUD_PROJECT=custodian-1291
+    GOOGLE_APPLICATION_CREDENTIALS=tools/c7n_gcp/tests/data/credentials.json
 
 [testenv:py39]
 commands =
@@ -59,15 +65,5 @@ setenv =
 whitelist_externals = make
 commands = make sphinx
 deps =
-  -r requirements-dev.txt
-  -r requirements-docs.txt
-
-[pytest]
-junit_family=xunit1
-; for travis, we set this up as env var that we can override to limit concurrency
-addopts= --tb=native
-markers =
-  functional
-  skiplive
-python_files = test_*.py
-norecursedirs = data cassettes templates
+  -rrequirements-dev.txt
+  -rrequirements-docs.txt
