--- a/tools/c7n_mailer/pyproject.toml
+++ b/tools/c7n_mailer/pyproject.toml
@@ -32,14 +32,22 @@ redis = "^3.4.1"
 jsonpointer = "^2.0"
 jsonpatch = "^1.25"
 types-six = "^1.16.10"
-google-cloud-secret-manager = "^2.8.0"
 importlib-metadata = ">=4.11.1, <5.0"
+
+# Optional packages for additional provider support
+c7n-gcp = { version = "*", optional = true }
+google-cloud-secret-manager = { version = "^2.8.0", optional = true }
+c7n-azure = { version = "*", optional = true }
 
 [tool.poetry.dev-dependencies]
 fakeredis = "^1.2.0"
 pytest = "^7.1.2"
 mypy = "^0.931"
 black = "^22.1.0"
+
+[tool.poetry.extras]
+gcp = ["c7n-gcp", "google-cloud-secret-manager"]
+azure = ["c7n-azure"]
 
 [build-system]
 requires = ["poetry>=0.12", "setuptools"]
