fix - gh action for website publishing

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: website-deploy
 on:
   push:
     branches:
-      - gh-pages
+      - gh-pages-source
 jobs:
   deploy:
     runs-on: ubuntu-latest
